--- a/_sass/components/_variables.scss
+++ b/_sass/components/_variables.scss
@@ -52,13 +52,13 @@ $hr-border-width:             $border-width;
 //
 
 $text-color:       rgba(0, 0, 0, 0.87) !default;
-$background-color: #f5f5f5;
+$background-color: #f9f9f9;
 
 $white:            #fff;
-$primary:          #42b983;
-$secondary:        #8d7edc;
+$primary:          #3498db;
+$secondary:        #95a5a6;
 $success:          #65e892;
-$danger:           #f83e4b;
+$danger:           #e74c3c;
 $warning:          #F5A623;
 $info:             #09ABF6;
 
