--- a/css/main.scss
+++ b/css/main.scss
@@ -22,6 +22,7 @@
 
 // Pages styling
 @import "pages/layout";
+@import "pages/categories";
 @import "pages/tags";
 @import "pages/archive";
 @import "pages/post";
