--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,4 @@
 <footer>
-  &copy; {{ site.time | date: '%Y' }} {{ site.owner.name }}. Powered by <a href="http://jekyllrb.com/">Jekyll</a>, <a href="http://github.com/renyuanz/leonids/">leonids theme</a> made with <i class="fa fa-heart heart-icon"></i>
+  &copy; {{ site.time | date: '%Y' }} Created by <a href="{{ site.owner.homepage }}" target="_blank">{{ site.owner.name }}</a>.
+  Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a>
 </footer>
