--- a/_includes/tags.html
+++ b/_includes/tags.html
@@ -1,10 +1,4 @@
----
-layout: page
-title:  Tags
-permalink: /tags/
----
-
-<h5>Tag cloud <i class="fa fa-cloud info-text-color"></i></h5>
+<h5><i class="fa fa-tag"></i> Tags</h5>
 <ul class="tag-cloud">
 {% for tag in site.tags %}
   <li style="font-size: {{ tag | last | size | times: 100 | divided_by: site.tags.size | plus: 70  }}%">
