--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,17 @@
     </div>
     <div class="col s12 m9">
       <div class="post-listing">
-        {{ content }}
-        {% include footer.html %}
+        <div class="row">
+          <div class="col s12 m8">
+            {{ content }}
+            {% include footer.html %}
+          </div>
+          <div class="col s12 m4">
+            <div class="tags">
+              {% include tags.html %}
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
