--- a/_layouts/post_listing.html
+++ b/_layouts/post_listing.html
@@ -10,7 +10,7 @@ layout: default
         {{ post.date | date: "%-d %b %Y" | upcase }}
       </span>
       {% if post.categories.size > 0 %}
-      •
+      <span class="bullet"></span>
       {% for cat in post.categories %}
         <a class="post-cat" href="{{ site.url }}/categories/#{{ cat }}">{{ cat }}</a>
         {% unless forloop.last %}
@@ -19,12 +19,9 @@ layout: default
       {% endfor %}
       {% endif %}
     </p>
-    <h4>
+    <h2>
       <a href="{{ site.url }}{{ post.url }}" class="post-title" title="{{ post.title }}">{{ post.title }}</a>
-      {% if post.link %}
-      <a class="post-title-link" href="{{ post.link }}" target="_blank" title="{{ post.title }}"><i class="fa fa-external-link"></i></a>
-      {% endif %}
-    </h4>
+    </h2>
 
     {% if post.author %}
       {% assign author = site.data.authors[post.author] %}
