--- a/_sass/pages/_layout.scss
+++ b/_sass/pages/_layout.scss
@@ -20,53 +20,21 @@
 .cover-card {
   color: $text-color;
   padding: 0 30px;
-  .avatar {
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    float: none;
-  }
-  .author_name {
-    display: block;
-    color: #F36170;
-    font-size: 1.75em;
-    text-transform: lowercase;
-  }
-  .author_job {
-    display: block;
-    color: $secondary;
-    font-size: 0.8em;
-    font-weight: 700;
-    text-transform: uppercase;
-    margin: -5px auto 10px;
-  }
-  .author_bio {
-    font-size: 90%;
-    display: block;
+  h1 {
+    font-size: 2.3em;
+    font-weight: normal;
+    a {
+      display: block;
+      text-align: left;
+      margin-bottom: 0.5em;
+      width: 190px;
+      color: $primary;
+    }
   }
   @include media-query($medium-screen) {
     text-align: right;
     margin: 0 auto;
     padding: 0 0px 80px;
-  }
-}
-.social-links {
-  margin-top: 0.5em;
-  ul {
-    margin: 0;
-    padding: 0;
-    li {
-      list-style: none;
-      display: inline-block;
-      margin-left: 1em;
-      a.social-link-item {
-        color: $secondary;
-        &:hover,
-        &:focus {
-          color: lighten($secondary, 14%);
-        }
-      }
-    }
   }
 }
 .nav-list {
