--- a/_sass/components/_variables.scss
+++ b/_sass/components/_variables.scss
@@ -57,7 +57,7 @@ $background-color: #f9f9f9;
 $white:            #fff;
 $primary:          #3498db;
 $secondary:        #95a5a6;
-$success:          #65e892;
+$success:          #1abc9c;
 $danger:           #e74c3c;
 $warning:          #F5A623;
 $info:             #09ABF6;
