--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,12 @@
 layout: default
 ---
 
+{% if page.author %}
+  {% assign author_name = site.authors[page.author].name %}
+{% else %}
+  {% assign author_name = site.owner.name %}
+{% endif %}
+
 <div id="post">
   <header class="post-header">
     <h1 title="{{ page.title }}">{{ page.title }}</h1>
@@ -11,6 +17,10 @@ layout: default
       </span>
       <span class="bullet"></span>
       {% include read_time.html %}
+      <span class="bullet"></span>
+      <span class="post-author">
+        {{ author_name }}
+      </span>
     </span>
 
   </header>
