--- a/_sass/pages/_categories.scss
+++ b/_sass/pages/_categories.scss
@@ -27,11 +27,13 @@ ul.tag-cloud {
     .tag-group-title {
       margin: 0.5em 0 0;
       color: $text-color;
-      text-transform: capitalize;
       font-weight: normal;
     }
     .tag-item {
       margin-bottom: .1em;
+      &.active {
+        font-weight: bold;
+      }
       a {
         font-size: $font-size-sm;
         &:hover,
