--- a/_sass/pages/_tags.scss
+++ b/_sass/pages/_tags.scss
@@ -1,3 +1,10 @@
 .tags {
-  padding: 50px 30px 0;
+  padding: 0 30px;
+}
+
+.post-tag {
+  border: 1px solid $success;
+  background-color: $background-color;
+  border-radius: 2px;
+  padding: 1px 3px;
 }
