--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,18 +11,7 @@ layout: default
 <div id="post">
   <header class="post-header">
     <h1 title="{{ page.title }}">{{ page.title }}</h1>
-    <span class="post-meta">
-      <span class="post-date">
-        {{ page.date | date: "%-d %b %Y" | upcase }}
-      </span>
-      <span class="bullet"></span>
-      {% include read_time.html %}
-      <span class="bullet"></span>
-      <span class="post-author">
-        {{ author_name }}
-      </span>
-    </span>
-
+    {% include post_meta.html p = page %}
   </header>
 
   <article class="post-content">
