--- a/_layouts/post_listing.html
+++ b/_layouts/post_listing.html
@@ -15,22 +15,7 @@ layout: default
       <a href="{{ site.url }}{{ post.url }}" class="post-title" title="{{ post.title }}">{{ post.title }}</a>
     </h2>
 
-    <p class="post-meta">
-      <span class="post-date">
-        {{ post.date | date: "%-d %b %Y" | upcase }}
-      </span>
-      {% if post.tags.size > 0 %}
-        <span class="bullet"></span>
-        {% for tag in post.tags %}
-          <span class="post-tag">{{ tag }}</span>
-          {% unless forloop.last %}
-          <span>/</span>
-          {% endunless %}
-        {% endfor %}
-      {% endif %}
-      <span class="bullet"></span>
-      {{ author_name }}
-    </p>
+    {% include post_meta.html p = post %}
 
     </header>
 
