Chapter 1 - Have you met Nette?

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -24,7 +24,7 @@
 
     <div class="tag-group archive-group">
         <article class="tag-item">
-          <a class="tag-item-title warning-text-color" href="{{ site.url }}archive">Archive</a>
+          <a class="tag-item-title warning-text-color" href="{{ site.url }}/archive/">Archive</a>
         </article>
       </div>
   </div>
