Chapter 3 - Blog in 20 minutes

--- a/_sass/components/_syntax-highlighting.scss
+++ b/_sass/components/_syntax-highlighting.scss
@@ -63,7 +63,7 @@ pre code {
   .hll { background-color: #ffffcc }
   .c { color: #B0B2B0; font-style: italic } /* Comment */
   .err {  } /* Error */
-  .k { color: #AA22FF; font-weight: bold } /* Keyword */
+  .k { color: #098233; font-weight: bold } /* Keyword */
   .o { color: #666666 } /* Operator */
   .cm { color: #B0B2B0; font-style: italic } /* Comment.Multiline */
   .cp { color: #B0B2B0 } /* Comment.Preproc */
@@ -98,7 +98,7 @@ pre code {
   .nl { color: #A0A000 } /* Name.Label */
   .nn { color: #0000FF; font-weight: bold } /* Name.Namespace */
   .nt { color: #008000; font-weight: bold } /* Name.Tag */
-  .nv { color: #B8860B } /* Name.Variable */
+  .nv { color: #B16C10 } /* Name.Variable */
   .ow { color: #AA22FF; font-weight: bold } /* Operator.Word */
   .w { color: #bbbbbb } /* Text.Whitespace */
   .mf { color: #666666 } /* Literal.Number.Float */
